<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.pdm.whereto.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnEat"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/cardview_light_background"
                android:text="@string/eat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSleep"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/cardview_light_background"
                android:text="@string/sleep"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnDance"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/cardview_light_background"
                android:text="@string/dance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnMovie"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/cardview_light_background"
                android:text="@string/movies"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnShowAll"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/common_plus_signin_btn_text_dark_pressed"
            android:text="@string/showAll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
